# ramp_template

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs  makefile
Webgpu.app/Contents/: Info.plist
Webgpu.app/Contents/Resources/: macos_icon.icns
android/app/manifests/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/font/: outfit.xml
ios/Ramp.app/: Info.plist
ios/Webgpu.app/: Info.plist
ios/Webgpu.app/_CodeSignature/: CodeResources
macos/Ramp.app/Contents/: Info.plist
src/: lib.rs
src/examples/: ice_cream.rs  mod.rs  motorcycle.rs  plants.rs
web/: index.html
