[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rust_on_rails = "3.0.0"

[build-dependencies]
embed-resource = "3.0.2"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]

####################
# ios config #
####################

[package.metadata.apple]
minimum-deployment-target = "17.5"

####################
# winres config #
####################

[package.metadata.winres]
OriginalFilename = "webgpu.exe"

####################
# cargo apk config #
####################

[package.metadata.android]
package = "com.webgpu.pkg"
build_targets = [ "aarch64-linux-android" ]
resources = "android/app/src/main/res"
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 31

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "ramp_template"

# See https://developer.android.com/guide/topics/manifest/meta-data-element
#
# Note: there can be several .meta_data entries.
# Note: the `resource` attribute is currently not supported.

