[package]
name = "ramp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pelican = {version = "2.0.4", package="pelican_ui"} #"0.2.8"
roost = {version = "2.0.4", package="roost_ui"} #"0.2.8"
include_dir = "0.7.4"
serde = "1.0.228"

[build-dependencies]
embed-resource = "3.0.2"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]

####################
# wasm config #
####################

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "net"] }

####################
# ios config #
####################

[package.metadata.apple]
minimum-deployment-target = "17.5"

####################
# winres config #
####################

[package.metadata.winres]
OriginalFilename = "ramp.exe"

####################
# cargo apk config #
####################

[package.metadata.android]
package = "com.ramp.pkg"
build_targets = [ "aarch64-linux-android" ]
resources = "android/app/src/main/res"
assets = "assets"
apk_name = "ramp"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 31

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "ramp"

[package.metadata.deb]
maintainer-scripts = "debian/"

# See https://developer.android.com/guide/topics/manifest/meta-data-element
#
# Note: there can be several .meta_data entries.
# Note: the `resource` attribute is currently not supported.

